2005-12-14 Karsten Behrmann <BearPerson@sourcemage.org>
	* caster: add lshw implicit g++ dep, fix cache creation
	* config: test uses stable sorcery, bad merge
	* isolinux.cfg: we no longer use devfs

2005-12-11 Karsten Behrmann <BearPerson@sourcemage.org>
	* config-2.6, gen-scripts/config: update for 2.6.14.2 kernel
	* gen-scripts/config: make devel ISOs use test sorcery

2005-12-08 Karsten Behrmann <BearPerson@sourcemage.org>
	* bootloader: Fix typo in function name...

2005-12-07 Karsten Behrmann <BearPerson@sourcemage.org>
	* config-2.6.ppc: pull SCSI into modules, it breaks boots

2005-12-07 Karsten Behrmann <BearPerson@sourcemage.org>
	* initrd.files: add some standard tools
	* iso.packages, optional-list: add lshw (9393)
	* caster: fix bug 9785, fix handling of failed casts
	* inittab, skeleton/usr/bin/installer-help.sh: add help on tty6 (9247)
	* installer.sh: add "start installation" button, add more intro
	* installation, installer.sh: move final message (bug 9792)
	* diskStructure: improve "no partition" warning for RAID
	* 30spellinstall: add status for fake spells

2005-12-04 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: add some remembering menus

2005-12-03 Karsten Behrmann <BearPerson@sourcemage.org>
	* skeleton/etc/sorcery/local/{config,config.ppc}: add def. arch (8757)
	* installer.sh: add notice about errors in install; fix bug 9657,
	  mark 2 steps as optional
	* modules/*: run external commands with try_run (9643)
	* installation: fix bug 9808
	* mkinitrd, iso.command, isolinux.{cfg,msg}, yaboot.{conf,msg}:
	  Insert initrd size and grimoire version just before rolling the ISO
	  (bug 9200)
	* skeleton/etc/{group,passwd,shadow}: add/move standard groups
	* skeleton/share/smgl.install/group-descriptions, modules/installation,
	  skeleton/usr/sbin/fancy-useradd.sh: fancy user addition script (9812)
	* diskStructure: uppercase button

2005-12-1 David Kowis <dkowis@sourcemage.org>