@@ -1,0 +1,46 @@
+#!/bin/bash
+if [[ $$ != 1 ]] ;then # You wanted the real shutdown I think
+  exec -a "$0" /sbin/real.shutdown "$@"
+  # Preserve 'being called as /sbin/reboot' too
+fi
+exec </dev/console
+exec >/dev/console
+exec 2>/dev/console
+mount tmpfs -t tmpfs /proc
+kill -SIGUSR1 -1
+sleep 1
+ROOTDEV=$(cat /proc/rootdev)
+ACTION=$(cat /proc/action)
+CDDEV=$(cat /proc/cddev)
+read -p "press enter..."
+if [[ $ACTION == "reboot" ]] ;then
+  mount -t proc proc /tmp
+  sync
+  echo 's' >/tmp/sysrq-trigger
+  >/proc/mounts
+  /usr/bin/eject $CDDEV
+  #Wants to unmount / first (and fails) if it sees the real /proc/mounts
+  read -p "Please remove the CD and press enter..."
+  echo 'b' >/tmp/sysrq-trigger
+  exit 1 #Never reached
+elif [[ $ACTION == "pivot_root" ]] ;then
+  umount /proc
+  mount -n $ROOTDEV /mnt/root
+  cd /mnt/root
+
+  if [[ -d mnt/cdrom ]] ;then
+    pivot_root . mnt/cdrom
+  elif [[ -d media/cdrom ]] ;then
+    pivot_root . media/cdrom
+  else
+    pivot_root . mnt
+  fi
+
+  [[ -e dev/console ]] || mount -n -t devfs devfs dev # mount devfs if needed
+
+  exec chroot . /sbin/init <dev/console >dev/console 2>dev/console
+  exit 1 #Never reached
+else
+  echo "I don't know what '$ACTION' is, so I'll just give you a shell..."
+  exec /bin/bash
+fi
